--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
    "source": "application/index.html",
    "browserslist": "Firefox <= 48",
+     "targets": {
+    "default": {
+      "distDir": "./dist",
+      "publicUrl":"./"
+    }
+  },
  
    "scripts": {
       "start": "parcel --no-source-maps ./application/index.html",
       "build": "parcel build ./application/index.html --no-source-maps --log-level error"
    },
    "devDependencies": {
-      "cssnano": "^5.0.17",
       "parcel": "^2.3.2",
-      "parcel-plugin-static-files-copy": "^2.6.0",
-      "postcss": "^8.4.6"
+      "parcel-plugin-static-files-copy": "^2.6.0"
    },
 
    "dependencies": {
-      "as": "^0.4.1",
-      "assets": "^3.0.1",
+ 
       "jsqr": "^1.4.0",
-      "handlebars": "^4.7.7",
-      "mustache": "^4.2.0"
-
+      "handlebars": "^4.7.7"
    },
 
 
