--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
       "parcel-plugin-static-files-copy": "^2.6.0"
    },
    "dependencies": {
-      "handlebars": "^4.7.7",
-      "jsqr": "^1.4.0",
-      "parcel-bundler": "^1.3.1"
+      "mithril": "^2.0.4",
+      "jsqr": "^1.4.0"
+      
    },
    "staticFiles": {
       "staticPath": [
