--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
    },
    "dependencies": {
       "jsqr": "^1.4.0",
+      "localforage": "^1.10.0",
       "minidenticons": "^1.0.3",
       "mithril": "^2.0.4",
       "peer": "0.6.1",
