--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
    "dependencies": {
       "jsqr": "^1.4.0",
       "kaios-lib": "^1.6.0",
+      "linkifyjs": "^3.0.5",
       "localforage": "^1.10.0",
       "minidenticons": "^1.0.3",
       "mithril": "^2.0.4",
