--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "source": "application/index.html",
   "browserslist": "Firefox <= 48",
+  "extends": "@parcel/config-default",
   "scripts": {
     "start": "rm -rf dist/* && parcel --no-source-maps application/index.html && cp application/manifest.webapp dist && cp -r application/assets/icons dist",
-    "build": "rm -rf dist/* && parcel build --no-source-maps --no-optimize application/index.html && cp application/manifest.webapp dist && mkdir dist/assets && cp -r application/assets/icons dist/assets/"
+    "build": "rm -rf dist/* && parcel build --no-source-maps --no-optimize --public-url . application/index.html && cp application/manifest.webapp dist && mkdir dist/assets && cp -r application/assets/icons dist/assets/"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
@@ -15,12 +16,19 @@
     "@babel/plugin-transform-runtime": "^7.18.5",
     "@babel/preset-env": "^7.19.1",
     "@parcel/transformer-html": "^2.6.2",
+    "buffer": "^6.0.3",
     "core-js": "^3.22.5",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.5.0",
-    "process": "^0.11.10"
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0"
   },
   "dependencies": {
     "@parcel/service-worker": "^2.8.0",
+    "dotenv": "^16.4.1",
     "jsqr": "^1.4.0",
     "kaios-lib": "^1.6.0",
     "linkifyjs": "^3.0.5",
