--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "watermelon",
+  "name": "flop",
   "version": "1.0.0",
   "source": "application/index.html",
   "browserslist": "Firefox <= 48",
@@ -21,6 +21,7 @@
     "crypto-browserify": "^3.12.0",
     "events": "^3.3.0",
     "os-browserify": "^0.3.0",
+    "parcel": "^2.12.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0"
@@ -29,7 +30,6 @@
     "@parcel/service-worker": "^2.8.0",
     "dotenv": "^16.4.1",
     "jsqr": "^1.4.0",
-    "kaios-lib": "^1.6.0",
     "linkifyjs": "^3.0.5",
     "localforage": "^1.10.0",
     "minidenticons": "^1.0.3",
