--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "source": "application/index.html",
   "browserslist": "Firefox <= 48",
   "scripts": {
-    "start": "rm -rf dist/* && parcel --no-source-maps application/index.html && cp application/manifest.webapp dist && cp -r application/assets/icons dist",
-    "build": "rm -rf dist/* && parcel build --no-source-maps --no-optimize application/index.html && cp application/manifest.webapp dist && mkdir dist/assets && cp -r application/assets/icons dist/assets/"
+    "build": "rm -rf dist/* && parcel build --no-source-maps --no-optimize application/index.html  && cp application/manifest.webapp dist && mkdir dist/assets && cp -r application/assets/icons dist/assets/",
+    "run": "parcel",
+    "web": "rm -rf webpage/* && parcel build --no-source-maps --no-optimize application/index.html  && cp application/manifest.webapp dist && mkdir webpage/assets && cp -r application/assets/icons webpage/assets/"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
