--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@babel/plugin-transform-named-capturing-groups-regex": "^7.17.12",
     "@babel/plugin-transform-runtime": "^7.18.5",
     "@babel/preset-env": "^7.19.1",
+    "@parcel/packager-raw-url": "^2.12.0",
     "@parcel/resolver-default": "^2.12.0",
     "@parcel/transformer-html": "^2.6.2",
+    "@parcel/transformer-webmanifest": "^2.12.0",
     "babel-plugin-transform-async-to-promises": "^0.8.18",
     "buffer": "^6.0.3",
     "core-js": "^3.22.5",
