--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "minidenticons": "^1.0.3",
     "mithril": "^2.0.4",
     "qrious": "^4.0.2",
-    "url-search-params-polyfill": "^8.1.1"
+    "url-search-params-polyfill": "^8.1.1",
+    "uuid": "^9.0.0",
+    "webrtc-adapter": "^9.0.1"
   }
 }
