--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@parcel/resolver-default": "^2.12.0",
     "@parcel/transformer-html": "^2.6.2",
     "@parcel/transformer-webmanifest": "^2.12.0",
+    "assert": "^2.1.0",
     "babel-plugin-transform-async-to-promises": "^0.8.18",
     "buffer": "^6.0.3",
     "core-js": "^3.22.5",
