--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@parcel/service-worker": "^2.8.0",
     "dotenv": "^16.4.1",
     "jsqr": "^1.4.0",
+    "leaflet": "^1.9.4",
     "linkifyjs": "^3.0.5",
     "localforage": "^1.10.0",
     "minidenticons": "^1.0.3",
