--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "source": "application/index.html",
   "browserslist": "Firefox <= 48",
   "scripts": {
-    "build": "rm -rf dist/* && parcel build --no-source-maps --no-optimize application/index.html  && cp application/manifest.webapp dist && mkdir dist/assets && cp -r application/assets/icons dist/assets/ && cp -r application/assets/css/marker-icon.png dist/",
+    "build": "rm -rf dist/* && parcel build --no-source-maps --no-optimize application/index.html  && cp application/manifest.webapp dist && mkdir dist/assets && cp -r application/assets/icons dist/assets/ && cp -r application/assets/css/marker-icon.png dist/assets/css/marker-icon.png && mkdir -p dist/assets/js/ && cp application/assets/js/kaiads.v5.min.js dist/assets/js/",
     "run": "parcel",
-    "web": "rm -rf webpage/* && parcel build --dist-dir webpage --public-url ./ --no-source-maps --no-optimize application/index.html && cp application/manifest.webapp webpage && cp application/manifest.webmanifest webpage && mkdir -p webpage/assets && cp -r application/assets/icons webpage/assets/ && cp -r application/assets/image webpage/assets/ && cp -r application/assets/fonts webpage/assets/ && cp -r application/assets/css/marker-icon.png webpage/"
+    "web": "rm -rf webpage/* && parcel build --dist-dir webpage --public-url ./ --no-source-maps --no-optimize application/index.html && cp application/manifest.webapp webpage && cp application/manifest.webmanifest webpage && mkdir -p webpage/assets && cp -r application/assets/icons webpage/assets/ && mkdir -p webpage/assets/js/ && cp application/assets/js/kaiads.v5.min.js webpage/assets/js/ && cp -r application/assets/image webpage/assets/ && cp -r application/assets/fonts webpage/assets/ && cp -r application/assets/css/marker-icon.png webpage/"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
