--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "source": "application/index.html",
   "browserslist": "Firefox <= 48",
   "scripts": {
-    "build": "rm -rf dist/* && parcel build --no-source-maps --no-optimize application/index.html  && cp application/manifest.webapp dist && mkdir dist/assets && cp -r application/assets/icons dist/assets/ && cp -r application/assets/image dist/assets/ && cp -r application/assets/css/marker-icon.png dist/assets/css/marker-icon.png && mkdir -p dist/assets/js/ && cp application/assets/js/kaiads.v5.min.js dist/assets/js/",
+    "build": "rm -rf dist/* && parcel build --no-source-maps --no-optimize application/index.html  && cp application/manifest.webapp dist && mkdir dist/assets && cp -r application/assets/icons dist/assets/ && cp -r application/assets/image dist/assets/  && mkdir -p dist/assets/js/ && cp application/assets/js/kaiads.v5.min.js dist/assets/js/",
     "run": "parcel",
-    "web": "rm -rf docs/* && parcel build --dist-dir docs --public-url ./ --no-source-maps --no-content-hash application/index.html && cp application/manifest.webapp docs && cp application/manifest.webmanifest docs && mkdir -p docs/assets && cp -r application/assets/icons docs/assets/ && mkdir -p docs/assets/js/ && cp application/assets/js/kaiads.v5.min.js docs/assets/js/ &&  mkdir -p docs/assets/image/ && cp -r application/assets/image docs/assets/ && cp -r application/assets/fonts docs/assets/ && ./generate_file_list.sh"
+    "web": "rm -rf docs/* && parcel build --dist-dir docs --public-url ./ --no-source-maps --no-content-hash application/index.html && cp application/manifest.webapp docs && cp application/manifest.webmanifest docs && mkdir -p docs/assets && cp -r application/assets/icons docs/assets/ && mkdir -p docs/assets/js/ && mkdir -p docs/assets/image/ && cp -r application/assets/image docs/assets/ && cp -r application/assets/fonts docs/assets/ && ./generate_file_list.sh"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
