--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "url-search-params-polyfill": "^8.1.1",
     "uuid": "^9.0.0",
     "webrtc-adapter": "^9.0.1",
-    "swiped-events": "^1.2.0"
+    "swiped-events": "^1.2.0",
+    "dayjs": "^1.11.13"
   }
 }
