--- a/package.json
+++ b/package.json
@@ -1,37 +1,85 @@
 {
   "name": "flop",
-  "version": "1.0.1",
+  "version": "2.0.1",
   "source": "application/index.html",
-  "browserslist": "Firefox <= 44",
+  "browserslist": [
+    "Firefox <= 48"
+  ],
   "scripts": {
-    "build": "rm -rf dist/* && parcel build --no-source-maps --no-optimize application/index.html  && cp application/manifest.webapp dist && mkdir dist/assets && cp -r application/assets/icons dist/assets/ && cp -r application/assets/image dist/assets/  && mkdir -p dist/assets/js/ && cp application/assets/js/kaiads.v5.min.js dist/assets/js/",
+    "build": "rm -rf dist/* && parcel build --no-source-maps application/index.html && cp application/manifest.webapp dist && mkdir -p dist/assets/js && cp -r application/assets/icons dist/assets/ && cp -r application/assets/image dist/assets/ && cp application/assets/js/kaiads.v5.min.js dist/assets/js/",
     "run": "parcel",
-    "web": "rm -rf docs/* && parcel build --dist-dir docs --public-url ./ --no-source-maps --no-content-hash application/index.html && cp application/manifest.webapp docs && cp application/manifest.webmanifest docs && mkdir -p docs/assets && cp -r application/assets/icons docs/assets/ && mkdir -p docs/assets/js/ && mkdir -p docs/assets/image/ && cp -r application/assets/image docs/assets/ && cp -r application/assets/fonts docs/assets/ && ./generate_file_list.sh"
+    "web": "rm -rf docs/* && parcel build --dist-dir docs --public-url ./ --no-source-maps --no-content-hash application/index.html && cp application/manifest.webapp docs && cp application/manifest.webmanifest docs && mkdir -p docs/assets/js && mkdir -p docs/assets/image && cp -r application/assets/image docs/assets/ && cp -r application/assets/fonts docs/assets/ && ./generate_file_list.sh",
+    "check-es": "es-check es5 'dist/**/*.js'"
+  },
+  "targets": {
+    "default": {
+      "context": "browser",
+      "engines": {
+        "browsers": [
+          "Firefox 48"
+        ]
+      },
+      "outputFormat": "global",
+      "isLibrary": false,
+      "sourceMap": false,
+      "optimize": false
+    }
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "firefox": "48"
+          },
+          "useBuiltIns": "usage",
+          "corejs": "3.32"
+        }
+      ]
+    ],
+    "plugins": [
+      "@babel/plugin-syntax-dynamic-import",
+      "@babel/plugin-transform-named-capturing-groups-regex",
+      "@babel/plugin-transform-runtime",
+      "babel-plugin-transform-async-to-promises"
+    ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.10",
-    "@babel/core": "^7.19.1",
+    "@agragregra/parcel-namer-beautify": "^1.0.1",
+    "@babel/cli": "^7.27.2",
+    "@babel/core": "^7.27.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-named-capturing-groups-regex": "^7.17.12",
     "@babel/plugin-transform-runtime": "^7.18.5",
-    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-env": "^7.27.2",
     "@parcel/packager-raw-url": "^2.12.0",
-    "@parcel/resolver-default": "^2.12.0",
-    "@parcel/transformer-html": "^2.6.2",
+    "@parcel/resolver-default": "^2.14.4",
+    "@parcel/transformer-html": "^2.13.3",
     "@parcel/transformer-webmanifest": "^2.12.0",
     "assert": "^2.1.0",
     "babel-plugin-transform-async-to-promises": "^0.8.18",
     "buffer": "^6.0.3",
-    "core-js": "^3.22.5",
+    "core-js": "^3.42.0",
     "crypto-browserify": "^3.12.0",
+    "es-check": "^9.1.2",
     "events": "^3.3.0",
+    "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "parcel": "^2.12.0",
+    "parcel-namer-rewrite": "^2.10.3-rc.2",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
-    "stream-browserify": "^3.0.0"
+    "source-map-explorer": "^2.5.3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "string_decoder": "^1.3.0",
+    "svgo": "^3.3.2",
+    "timers-browserify": "^2.0.12",
+    "url": "^0.11.4"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@dicebear/core": "^9.2.2",
     "@dicebear/identicon": "^9.2.2",
     "@dicebear/initials": "^9.2.2",
@@ -45,6 +93,7 @@
     "linkifyjs": "^3.0.5",
     "localforage": "^1.10.0",
     "mithril": "^2.0.4",
+    "peerjs": "^1.5.4",
     "qrious": "^4.0.2",
     "swiped-events": "^1.2.0",
     "url-search-params-polyfill": "^8.1.1",
