--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
     "@babel/core": "^7.27.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-named-capturing-groups-regex": "^7.17.12",
-    "@babel/plugin-transform-runtime": "^7.18.5",
     "@babel/preset-env": "^7.27.2",
-    "@parcel/packager-raw-url": "^2.13.3",
+    "@parcel/packager-raw-url": "2.10.0",
     "@parcel/resolver-default": "^2.15.2",
-    "@parcel/transformer-html": "^2.13.3",
-    "@parcel/transformer-webmanifest": "^2.13.3",
+    "@parcel/transformer-html": "2.10.0",
+    "@parcel/transformer-webmanifest": "2.10.0",
     "assert": "^2.1.0",
     "babel-plugin-transform-async-to-promises": "^0.8.18",
     "buffer": "^6.0.3",
@@ -33,8 +32,9 @@
     "events": "^3.3.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
-    "parcel-namer-rewrite": "^2.10.3-rc.2",
+    "parcel": "2.10.0",
     "path-browserify": "^1.0.1",
+    "peerjs": "^1.3.2",
     "process": "^0.11.10",
     "source-map-explorer": "^2.5.3",
     "stream-browserify": "^3.0.0",
@@ -50,7 +50,7 @@
     "@dicebear/identicon": "^9.2.2",
     "@dicebear/initials": "^9.2.2",
     "@parcel/service-worker": "^2.8.0",
-    "audiomotion-analyzer": "^4.5.0",
+    "audiomotion-analyzer": "4.1.0",
     "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.4",
@@ -60,11 +60,9 @@
     "linkifyjs": "^3.0.5",
     "localforage": "^1.10.0",
     "mithril": "^2.0.4",
-    "peerjs": "^1.3.2",
     "qrious": "^4.0.2",
     "swiped-events": "^1.2.0",
     "url-search-params-polyfill": "^8.1.1",
-    "uuid": "^9.0.0",
-    "webrtc-adapter": "^9.0.1"
+    "uuid": "^9.0.0"
   }
 }
