--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "Firefox <= 84"
   ],
   "scripts": {
-    "build": "rm -rf dist/* && parcel build --no-source-maps application/index.html && mkdir -p dist/assets/js && cp -r application/assets/icons dist/assets/ && cp -r application/assets/image dist/assets/ && cp application/assets/js/kaiads.v5.min.js dist/assets/js/ && mkdir -p build && (cd dist && zip -r ../build/flop.zip .)",
+    "build": "rm -rf dist/* && parcel build  --no-source-maps application/index.html && mkdir -p dist/assets/js && cp -r application/assets/icons dist/assets/ && cp -r application/assets/image dist/assets/ && cp application/assets/js/kaiads.v5.min.js dist/assets/js/ && mkdir -p build && (cd dist && zip -r ../build/flop.zip .)",
+    "build-k2": "rm -rf dist/* && parcel build application/index.html --no-scope-hoist --no-source-maps && mkdir -p dist/assets/js && cp -r application/assets/icons dist/assets/ && cp -r application/assets/image dist/assets/ && cp application/assets/js/kaiads.v5.min.js dist/assets/js/ && mkdir -p build && (cd dist && zip -r ../build/flop-k2.zip .)",
     "run": "parcel",
     "web": "rm -rf docs/* && parcel build --dist-dir docs --public-url ./ --no-source-maps --no-content-hash application/index.html &&  cp application/manifest.webmanifest docs && mkdir -p docs/assets/js && mkdir -p docs/assets/image && cp -r application/assets/image docs/assets/ && cp -r application/assets/fonts docs/assets/ && cp -r application/assets/icons docs/assets/ && ./generate_file_list.sh"
   },
@@ -19,10 +20,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-named-capturing-groups-regex": "^7.17.12",
     "@babel/preset-env": "^7.27.2",
-    "@parcel/packager-raw-url": "2.10.0",
+    "@parcel/packager-raw-url": "^2.10.0",
     "@parcel/resolver-default": "^2.15.2",
-    "@parcel/transformer-html": "2.10.0",
-    "@parcel/transformer-webmanifest": "2.10.0",
+    "@parcel/transformer-html": "^2.10.0",
+    "@parcel/transformer-webmanifest": "^2.10.0",
     "assert": "^2.1.0",
     "babel-plugin-transform-async-to-promises": "^0.8.18",
     "buffer": "^6.0.3",
