--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "es-check": "^9.1.2",
     "events": "^3.3.0",
     "https-browserify": "^1.0.0",
+    "js-image-compressor": "^2.0.0",
     "os-browserify": "^0.3.0",
     "parcel": "2.10.0",
     "path-browserify": "^1.0.1",
@@ -51,7 +52,6 @@
     "@dicebear/identicon": "^9.2.2",
     "@dicebear/initials": "^9.2.2",
     "@parcel/service-worker": "^2.8.0",
-    "audiomotion-analyzer": "4.1.0",
     "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.4",
