--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dompurify": "^3.2.4",
     "dotenv": "^16.4.1",
     "jsqr": "^1.4.0",
+    "jszip": "^3.10.1",
     "leaflet": "^1.9.4",
     "linkifyjs": "^3.0.5",
     "localforage": "^1.10.0",
